--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,16 +7,13 @@ services:
     networks:
       - default
       - reverse-proxy
-    restart: always
     volumes:
       - ./conf:/verdaccio/conf
       - ./storage:/verdaccio/storage
       - ./plugins:/verdaccio/plugins
-    environment:
-      - VIRTUAL_PORT=4873
-      - VIRTUAL_HOST=verdaccio.nguyenantoine.com
-      - LETSENCRYPT_HOST=verdaccio.nguyenantoine.com
-      - LETSENCRYPT_EMAIL=antoine.ngu@outlook.fr
+    env_file:
+      - .env
+    restart: always
 networks:
   reverse-proxy:
     external:
